# NovaOs

./: .env.example  .gitignore  LICENSE  README.md  import_log.json  novaos_memory.db  novaos_report_20260303_230301.json  novaos_report_20260304_000341.json  novaos_report_20260304_000439.json  novaos_undo.json  pyproject.toml
novaos/: app.py
novaos/cli/: interface.py
novaos/core/: controller.py  executor.py  interpreter.py  planner.py
novaos/input/: voice.py
novaos/intelligence/: ai_adapter.py  code_analyzer.py
novaos/memory/: database.py
novaos/utils/: _undo_test_tmp.py  logger.py  security.py
