[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novaos"
version = "0.1.0"
description = "Voice-Enabled Local AI Developer Operating Layer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nigam Vaghani"}
]
keywords = ["automation", "cli", "voice", "developer-tools", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "flask",
    "click",
    "psutil",
    "SpeechRecognition",
    "requests"
]

[project.scripts]
nova = "novaos.cli.interface:cli"

[tool.setuptools.packages.find]
where = ["."]